--- a/css/admin.css
+++ b/css/admin.css
@@ -7,11 +7,15 @@
     text-align: center;
     margin-top: 70px; /* Zwiększ margines górny */
     margin-bottom: 20px;
+    max-width: 70%; /* Ustaw maksymalną szerokość na 50% */
+    margin-left: auto; /* Wyrównaj do prawej */
+    margin-right: auto; /* Wyrównaj do lewej */
+
 }
 
 
 .bet-info {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     background-color: #ffffff;
     padding: 10px;
     border-radius: 10px;
@@ -42,6 +46,9 @@
 body {
     font-family: "Galindo", sans-serif;
     background-color: #f2f2f2;
+    background-image: url('/esz/background1.png'); 
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 header {
     background-color: #ec1c24;
@@ -55,6 +62,7 @@ header {
     position: fixed;
     top: 0; 
     left: 0; 
+    z-index: 1000;
 }
 .user-actions a {
     margin-right: 15px;
