--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -45,7 +45,7 @@ input {
 }
 
 button {
-    background-color: #e74c3c;
+    background-color: #ec1c24;
     color: #fff;
     padding: 10px 15px;
     border: none;
@@ -54,10 +54,115 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #CC0000;
 }
 
 .error-message {
     color: #ff0000;
     margin-top: 10px;
 }
+*:focus {
+    outline: none;
+  }
+  
+  
+  .input-group {
+    display: block;
+    width: 441px;
+    max-width: 100%;
+    height: 82px;
+    border: 0;
+    background-color: #ffffff;
+    border-bottom-left-radius: 41px;
+    border-bottom-right-radius: 41px;
+    border-top-left-radius: 41px;
+    border-top-right-radius: 0;
+    box-shadow: 0 17px 40px 0 rgba(75, 128, 182, 0.07);
+    margin-bottom: 22px;
+    position: relative;
+    font-size: 17px;
+    color: #a7b4c1;
+    transition: opacity 0.2s ease-in-out, filter 0.2s ease-in-out,
+      box-shadow 0.1s ease-in-out;
+  }
+  
+  .input-group:hover {
+    box-shadow: 0 14px 44px 0 rgba(0, 0, 0, 0.077);
+  }
+  
+  .input-group input {
+    position: absolute;
+    border: 0;
+    box-shadow: none;
+    background-color: rgba(255, 255, 255, 0);
+    top: 0;
+    height: 65px;
+    width: 100%;
+    padding: 0 53px;
+    box-sizing: border-box;
+    z-index: 3;
+    display: block;
+    color: black;
+    font-size: 17px;
+    font-family: "Oxygen", sans-serif;
+    transition: top 0.1s ease-in-out;
+  }
+  
+  .input-group input::placeholder {
+    color: rgba(0, 0, 0, 0);
+  }
+  
+  .input-group input:focus,
+  .input-group input:not(:placeholder-shown) {
+    top: 17px;
+  }
+  
+  .input-group label {
+    position: absolute;
+    border: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2;
+    display: flex;
+    align-items: center;
+    padding: 0 53px;
+    box-sizing: border-box;
+    transition: all 0.1s ease-in-out;
+    cursor: text;
+  }
+  
+  .input-group input:focus + label,
+  .input-group input:not(:placeholder-shown) + label {
+    bottom: 20px;
+    font-size: 13px;
+    opacity: 0.7;
+  }
+  a.button {
+    position: relative;
+    color: #000;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    color: #000000;
+  }
+  
+  a::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #ec1c24;
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
+  }
+  
+  a:hover::before {
+    transform: scaleX(1);
+  }
+  
