--- a/css/profilestyle.css
+++ b/css/profilestyle.css
@@ -4,6 +4,9 @@ body {
     background-color: #f2f2f2;
     margin: 0;
     padding: 0;
+    background-image: url('/esz/background1.png'); 
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .container {
@@ -150,6 +153,7 @@ header {
     position: fixed;
     top: 0; 
     left: 0; 
+    z-index: 1000;
 }
 nav ul {
     list-style: none;
