--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -39,11 +39,11 @@ header {
 nav ul {
     list-style: none;
     display: flex;
-    margin-left: 42px; /* Stały odstęp między elementami */
+    margin-left: 42px;
 }
 
 nav ul li {
-    margin-left: 10px; /* Odstęp między elementami */
+    margin-left: 10px;
     position: static;
 }
 
@@ -91,14 +91,14 @@ nav ul li a {
     font-family: "Arial Black";
     font-size: 23px;
     display: block;
-    margin: 2; /* Usuń marginesy */
-    line-height: 25px; /* Ustaw mniejszy line-height */
+    margin: 2;
+    line-height: 25px;
 }
 
 .radio-container {
     display: flex;
-    justify-content: flex-end; /* Wyśrodkuj elementy na końcu kontenera */
-    margin-right: 20px; /* Przesunięcie całego kontenera w prawo */
+    justify-content: flex-end;
+    margin-right: 20px;
 }
 
 .radio-container label {
@@ -191,13 +191,13 @@ color: #ffffff;
     margin-top: 40px;
     
     display: flex;
-    justify-content: center; /* Wycentrowanie w poziomie */
+    justify-content: center;
 }
 
 .label {
     font-size: 10px;
-    margin: 0 10px; /* Ustawienie ujemnego marginesu poziomego, aby zbliżyć etykiety */
-    text-align: center; /* Wycentrowanie tekstu wewnątrz etykiety */
+    margin: 0 10px;
+    text-align: center;
 }
 
 .help-button {
@@ -209,8 +209,8 @@ color: #ffffff;
     background-color: black;
     color: white;
     border: 2px solid black;
-    border-radius: 10px; /* Dodaj zaokrąglenie rogów */
-    padding: 6px 20px; /* Dostosuj odstępy wewnętrzne */
+    border-radius: 10px;
+    padding: 6px 20px;
     cursor: pointer;
     font-size: 11px;
 }
@@ -218,26 +218,26 @@ color: #ffffff;
 
 
 .gambling-warning {
-    margin-top: 20px; /* odstęp od guzika */
-    text-align: center; /* wyśrodkowanie tekstu */
-    color: rgb(219, 218, 218); /* kolor szary */
-    font-size: 9px; /* mniejsza czcionka */
+    margin-top: 20px;
+    text-align: center;
+    color: rgb(219, 218, 218);
+    font-size: 9px; 
 }
 .gambling {
-    margin-top: 20px; /* odstęp od guzika */
-    text-align: center; /* wyśrodkowanie tekstu */
-    color: rgb(219, 218, 218); /* kolor szary */
-    font-size: 9px; /* mniejsza czcionka */
+    margin-top: 20px; 
+    text-align: center; 
+    color: rgb(219, 218, 218);
+    font-size: 9px;
 }
 .costam {
-    margin-top: 20px; /* odstęp od guzika */
-    text-align: center; /* wyśrodkowanie tekstu */
-    color: rgb(219, 218, 218);   /* kolor szary */
+    margin-top: 20px; 
+    text-align: center; 
+    color: rgb(219, 218, 218);   
     font-size: 9px; 
 }
 .wersja {
-    margin-top: 20px; /* odstęp od guzika */
-    text-align: center; /* wyśrodkowanie tekstu */
+    margin-top: 20px; 
+    text-align: center; 
     color: rgb(219, 218, 218);
     font-size: 9px; 
 }
@@ -252,13 +252,13 @@ color: #ffffff;
     content: '';
     position: absolute;
     left: 0;
-    bottom: -35px; /* Zwiększona odległość linii od label */
-    width: 100%; /* Zmniejszona długość linii */
-    height: 4px; /* Grubość linii */
-    background-color: gray; /* Domyślny kolor linii */
-    border-radius: 2px; /* Dodaj zaokrąglenia */
+    bottom: -35px; 
+    width: 100%; 
+    height: 4px; 
+    background-color: gray; 
+    border-radius: 2px; 
 }
 
 .radio-container input:checked + label::after {
-    background-color: green; /* Kolor linii, gdy radio jest zaznaczone */
+    background-color: green; 
 }
