--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -5,9 +5,10 @@ body {
     margin: 0;
     padding: 0;
     padding-top: 50px;
-    background-image: url('/esz/background1.png'); 
+    background-image: url('../obrazy/background1.png');
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 #app {
