--- a/css/profilestyle.css
+++ b/css/profilestyle.css
@@ -4,9 +4,10 @@ body {
     background-color: #f2f2f2;
     margin: 0;
     padding: 0;
-    background-image: url('/esz/background1.png'); 
+    background-image: url('../obrazy/background1.png');
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .container {
