--- a/css/registerstyle.css
+++ b/css/registerstyle.css
@@ -57,9 +57,10 @@ button:hover {
 }
 body {
     font-family: "Galindo", sans-serif;
-    background-image: url('/esz/background1.png'); 
+    background-image: url('../obrazy/background1.png');
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 *:focus {
     outline: none;
